[package]
name = "micro-rdk-modular-driver-example"
authors.workspace = true
description = "Modular driver examples for Micro-RDK"
edition.workspace = true
license = "Apache-2.0"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
esp32 = ['micro-rdk/esp32']

[dependencies]
log.workspace = true
micro-rdk = { workspace = true }
thiserror.workspace = true

[build-dependencies]
embuild = {workspace = true, features = ["elf", "espidf"]}

[package.metadata.com.viam]
module = true

# we need some peripherals address definitions that are not included by default for ULP operation
[[package.metadata.esp-idf-sys.extra_components]]
bindings_header = "bindings.h"
