[package]
name = "native"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Menard <nicolas.p.menard@gmail.com>"]
resolver = "2"

[patch.crates-io]
polling = { git = "https://github.com/esp-rs-compat/polling" }
smol = { git = "https://github.com/esp-rs-compat/smol" }
socket2 = { git = "https://github.com/npmenard/socket2.git" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
mini-rdk = {path = "../../", default-features=false, features = ["native"] }
anyhow = {version = "1", features = ["backtrace"]}
embedded-hal = "0.2.7"
log = "0.4"
hyper = {version="0.14.20", default-features = false, features = ["server","stream","http2"]}
futures-lite = "1.12.0"
tracing-subscriber = "0.3.16"
simple_logger = "2.3.0"
tracing = "0.1"
local-ip-address = "0.4.9"
openssl = "0.10.45"


[build-dependencies]
anyhow = "1"
const-gen = "1.3.0"
tokio = { version = "1", features = ["full"] }
viam = {version = ">=0.0.7", git = "https://github.com/viamrobotics/viam-rust-sdk.git"}
serde = {version="1.0.145",features=["derive"]}
serde_json = "1.0.86"
viam-rust-utils = "0.0.6"
gethostname = "0.4.1"
local-ip-address = "0.4.9"

[[example]]
name = "native"
path = "native.rs"

