[package]
authors = ["Nicolas Menard <nicolas.p.menard@gmail.com>"]
edition = "2021"
name = "native"
resolver = "2"
version = "0.1.0"

[patch.crates-io]
polling = { git = "https://github.com/esp-rs-compat/polling" }
smol = { git = "https://github.com/esp-rs-compat/smol" }
socket2 = { git = "https://github.com/npmenard/socket2.git" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }    
futures-lite = "1.12.0"
hyper = { version="0.14.20", default-features = false, features = ["server","stream","http2"] }
local-ip-address = "0.4.9"
log = "0.4"
mini-rdk = { path = "../../", default-features=false, features = ["native"] }
openssl = "0.10.45"
simple_logger = "2.3.0"
tracing = "0.1"
tracing-subscriber = "0.3.16"


[build-dependencies]
anyhow = "1"
const-gen = "1.3.0"
gethostname = "0.4.1"
local-ip-address = "0.4.9"
serde = { version="1.0.145",features=["derive"] }
serde_json = "1.0.86"
tokio = { version = "1", features = ["full"] }
viam = { version = ">=0.0.7", git = "https://github.com/viamrobotics/viam-rust-sdk.git" }
viam-rust-utils = "0.0.6"

[[example]]
name = "native"
path = "native.rs"

