[package]
name = "{{project-name}}"
version = "0.3.3"
edition = "2021"
authors = ["{{authors}}"]
resolver = "2"
rust-version = "1.83"

[dependencies]
micro-rdk = {git = "https://github.com/viamrobotics/micro-rdk.git", features = ["{{mcu}}"], version = "0.3.3", rev = "bb050e5"}

[package.metadata.com.viam]
module = true
