[package]
name = "{{project-name}}"
version = "0.2.3"
edition = "2021"
authors = ["{{authors}}"]
resolver = "2"
rust-version = "1.75"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies.micro-rdk]
version = "0.2.3"
git = "https://github.com/viamrobotics/micro-rdk.git"
features = ["esp32", "binstart", "provisioning", {% if camera == "true" %}"camera"{%endif%}]
rev = "098d3f1"

[dependencies]
embedded-svc = "0.27"
embedded-hal = { version = "0.2.7", features = ["unproven"]}
log = "0.4"
async-channel = "2"
futures-lite = "1"
micro-rdk = {version = "0.2.2", git = "https://github.com/viamrobotics/micro-rdk.git", features = ["esp32", "binstart","provisioning"], rev = "a1863c9" }

[build-dependencies]
cargo_metadata = "0.18"
embuild = "0.29"
regex = "1.10"

[package.metadata.esp-idf-sys]
esp_idf_version = "v4.4.8"
esp_idf_tools_install_dir = "custom:target/.embuild/espressif"
esp_idf_sdkconfig_defaults = [
  "sdkconfig.defaults",
]

{% if camera == "true" %}
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp32-camera", version = "2.0.9"}
bindings_module = "camera"
bindings_header = "bindings.h"
{% endif %}
