[package]
name = "{{project-name}}"
version = "0.3.3"
edition = "2021"
authors = ["{{authors}}"]
resolver = "2"
# TODO(RSDK-8992): Upgrade rust to latest esp-rs version
rust-version = "1.82"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies.micro-rdk]
git = "https://github.com/viamrobotics/micro-rdk.git"
version = "0.3.3"
rev = "bb050e5"
features = [
  "esp32",
  "binstart",
  {% if camera == "true" %}"camera",{% endif %}
]

[dependencies]
embedded-svc = "0.27"
embedded-hal = { version = "~0.2", features = ["unproven"]}
log = "0.4"
async-channel = "2"
futures-lite = "2"

[build-dependencies]
cargo_metadata = "0.18"
embuild = "0.32"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.esp-idf-sys]
# TODO(RSDK-8998): Upgrade ESP-IDF to latest stable
esp_idf_version = "v4.4.8"
esp_idf_tools_install_dir = "custom:target/.embuild/espressif"
esp_idf_sdkconfig_defaults = [
  "sdkconfig.defaults",
]

{% if camera == "true" %}
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp32-camera", version = "2.0.9"}
bindings_module = "camera"
bindings_header = "bindings.h"
{% endif %}
